--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Kata4.jar
+dist.jar=${dist.dir}/Kata5p2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcommon-1.0.23.jar=..\\Kata3\\src\\JFreeChart\\jcommon-1.0.23.jar
@@ -57,7 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=kata4.main.Kata4
+main.class=kata5.main.Kata4
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
