--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcommon-1.0.23.jar=..\\Kata3\\src\\JFreeChart\\jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar=..\\Kata3\\src\\JFreeChart\\jfreechart-1.0.19.jar
+file.reference.sqlite-jdbc-3.23.1.jar=C:\\Users\\LionBlue98\\Documents\\NetBeansProjects\\DB_SQLite\\sqlite-jdbc-3.23.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcommon-1.0.23.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar}
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.sqlite-jdbc-3.23.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -57,7 +59,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=kata5.main.Kata4
+main.class=kata5.main.Kata5p2
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
